Fix delete button overflow in DocumentListItem
Add box-sizing: border-box to .item so that width: 100% includes
padding, preventing the delete button from overflowing the sidebar.

--- a/packages/app/src/components/DocumentListItem.module.css
+++ b/packages/app/src/components/DocumentListItem.module.css
@@ -8,6 +8,7 @@
   border: none;
   background: none;
   width: 100%;
+  box-sizing: border-box;
   text-align: left;
   font: inherit;
   color: inherit;
